initial css formating fixes (color, some alignment)

--- a/floats.css
+++ b/floats.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  background-color: lightseagreen;
 }
 
 header {
@@ -21,22 +22,44 @@ section {
 }
 
 #left {
+  padding: 20px;
+  color: white;
+  background-color: #666;
+  float: left;
 }
 
 #middle {
+  padding: 20px;
+  color: white;
+  background-color: #888;
+  float: left;
 }
 
 #right {
+  padding: 20px;
+  color: #333;
+  background-color: #fff;
 }
 
 #full {
+  padding: 20px;
+  color: #333;
+  background-color:  #eee;
 }
 
 #division {
+  color: #333;
+  background-color: #6ea3da;
 }
 
 aside {
+  color: #333;
+  background-color: #fff;
 }
 
 footer {
+  padding: 20px;
+  margin-bottom: 20px;
+  color: #333;
+  background: #ccc;
 }
